# raft-algo-basic

./: CMakeLists.txt
include/: raft_fsm.h  raft_network.h  raft_peer.h  raft_types.h
src/: main.c  raft_fsm.c  raft_network.c
